--- a/booking-platform/package.json
+++ b/booking-platform/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "botonic-booking-platform",
+  "name": "Hackathon",
   "version": "1.0.0",
   "scripts": {
     "build": "webpack --env target=all --mode=production",
     "start": "webpack serve --env target=dev --mode=development",
     "test": "jest",
-    "train:ner": "ts-node src/nlp/tasks/ner/train.ts",
-    "train:intent-classification": "ts-node src/nlp/tasks/intent-classification/train.ts"
+    "train": "node_modules/.bin/ts-node src/nlu/train-model.ts"
   },
   "jest": {
     "rootDir": "tests",
@@ -20,7 +19,10 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
-    "@botonic/react": "~0.21.0",
+    "@botonic/react": "~0.18.0",
+    "@botonic/plugin-contentful": "^0.17.1",
+    "contentful": "^8.1.7",
+    "dotenv": "^8.2.0",
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.0",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -50,19 +52,16 @@
     "imagemin-svgo": "^7.0.0",
     "imagemin-webpack": "^5.0.0",
     "jest": "^26.6.3",
-    "node-sass": "^8.0.0",
+    "node-sass": "^5.0.0",
     "null-loader": "^4.0.1",
-    "process": "^0.11.10",
     "react-hot-loader": "^4.13.0",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "terser": "^5.5.1",
     "terser-webpack-plugin": "^5.0.3",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.4.4",
     "webpack": "^5.10.3",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "4.13.3"
+    "webpack-dev-server": "^4.0.0-beta.0"
   }
 }
